--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-icons": "^5.0.1",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@types/uuid": "^9.0.8",
+    "@types/web-push": "^3.6.3",
     "daisyui": "^4.6.1",
     "encoding": "^0.1.13"
   }
