--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "update-types": "npx supabase gen types typescript --project-id xbvdmuvadbkwihtbawpc > types/supabase.types.ts"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "browser-image-compression": "^2.0.2",
     "geist": "^1.2.1",
     "next": "latest",
     "next-pwa": "^5.6.0",
@@ -19,7 +21,8 @@
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3",
     "uuid": "^9.0.1",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
