--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "update-types": "npx supabase gen types typescript --project-id xbvdmuvadbkwihtbawpc > types/supabase.types.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
