--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "update-types": "npx supabase gen types typescript --project-id xbvdmuvadbkwihtbawpc > types/supabase.types.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
@@ -16,6 +17,7 @@
     "next-pwa": "^5.6.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "tailwindcss": "3.4.1",
